--- a/index.css
+++ b/index.css
@@ -21,13 +21,19 @@ body{
     width: 200px;
 }
 
+
+.button{
+    border: 1px solid dodgerblue;
+    border-radius: 0.5rem;
+    background-color: dodgerblue;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+
 .menu .button a{
     text-decoration: none;
-    border: 1px solid dodgerblue;
-    border-radius: 0.25rem;
-    background-color: dodgerblue;
     color: white;
-    padding: 0.5rem;
 }
 
 .images{
